tests/cases/positive/typing/inference/pair.lam
-- the 'z in a * b' should be matched with the 'a * b' in the type
pairId : (a b : Type 0) -> (a * b) -> (a * b)
pairId = \a b p -> case p as z in a * b of <x, y> -> <x, y>
