tests/cases/negative/typing/regression/missingParamDependentApplication.lam
-- the program should complain about how 'Level' is expected
-- to have type 'c l', but instead is type 'Type 0'
--
-- this is a regression test---it used to be that this
-- would complain about "Unknown identifier 'p'"
t : (c : Unit -> Type 0) (p : Unit) -> (Unit -> c p) -> c p
t = \c l e -> Unit
